# magics

./: .appveyor.yml  .clang-format  .gitattributes  .gitignore  .sonarcloud.properties  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Dockerfile  INSTALL  LICENSE  LICENSE_for_source_files  Makefile  NEWS  NOTICE  README  README.md  VERSION.cmake  Vagrantfile  check_formatting.sh  compile.sh  configure.daily  configure.debug  configure.ecgb  configure.ecmwf  configure.example  configure.local  configure.lxab  configure.metview  configure.regression  do_formattting.sh  magics-config.in  magics-import.cmake.in  magics-windows.code-workspace  magics.code-workspace  magics.sublime-project  mofc_2t_anomaly.grib  project_summary.cmake  requirements.txt  (+1 more)
apps/MagMLInterpretor/: CMakeLists.txt  grib.template  gribview  json.cc  magics-script.in  magics.cc  magjson-script.in  magml-script.in  magml.cc  test.magml  web.magml
apps/metgram/: 10_days_epsgram.xml  10_days_metgram.xml  10_days_metgram_a3.xml  10_days_wave_epsgram.xml  10_days_wave_epsgram_a3.xml  15_days_epsgram.xml  15_days_epsgram_a3.xml  CMakeLists.txt  anna.pl  efiserver.pl  eps.xml  eps10.xml  eps10_a3.xml  eps15.xml  eps15_a3.xml  epsgram.template  epsserver.pl  epswave.xml  epswind.xml  magplusserver.pl  metgram  metgram-script.in  metgram.template  metgram.xml  metgramx.cc  metview_metgramserver.pl  multi_metgrams.xml  multi_metgrams_page1.xml  multi_metgrams_page2.xml  multi_metgrams_page3.xml  multi_metgrams_page4.xml  tigge_epsgram.xml  wave10.xml  wave10_a3.xml
python/: CMakeLists.txt  Magics.i.in  Magics.py.in  Magics_interface.cc  magics.py  setup.py.in
python/Magics/: CMakeLists.txt  Magics.i.in  Magics_interface.cc  __init__.py  macro.py  metgram.py  setup.py.in  toolbox.py
python/test_for_ctypes/: array.py  test_ctypes.py  test_ctypes_graph.py
regression/: CMakeLists.txt  compare.py  load.ksh  load_py.ksh  regression_util.py  remove_branch.py  remove_version.py  report_template.html  summary.py  summary_template.html  upload.py
regression/axis/: CMakeLists.txt  automatic_axis.F  axis01.F  axis02.F  load.ksh  logarithmic.py  position_list.py
regression/basic/: CMakeLists.txt  basic.c  basic.f90  contour.f  data.json  graph.json  symbol.py
regression/climetlab/: .gitignore  array.yaml  csv-table.csv  csv-table.yaml  debug.yaml  get-era5.py  goode.yaml  grib.yaml  issue.yaml  msl.yml  netcdf.yaml  plumes.yaml  styles.yaml  test-era5.sh  test-exception.yaml
regression/coast/: CMakeLists.txt  coast_attributes_ex.F  coast_boundaries.F  coast_res.F  coast_uk.F  coastonly_1.F  landsea_shading.F  load.ksh
regression/contour/: CMakeLists.txt  cont08.F  cont_EFOV.F  cont_akima_example.F  cont_alternate.F  cont_array.F  cont_attributes_ex.F  cont_auto_ex.F  cont_auto_t1279.F  cont_auto_t799.F  cont_cellshade_test1.F  cont_dotshade_test1.F  cont_flat_field_1.F  cont_gridshade_test1.F  cont_gridvals_ex.F  cont_hatchshade_ex.F  cont_labels.F  cont_linestyles_ex.F  cont_markershade_ex.F  cont_methods_ex.F  cont_missing.F  cont_missing_2.F  cont_noshade_ex.F  cont_res_ex.F  cont_simple.F  cont_solidshade_ex.F  cont_solidshade_test1.F  cont_solidshade_test2.F  cont_solidshade_test3.F  cont_split.F  cont_wind_array.F  load.ksh
regression/data/: CMakeLists.txt  data_gaussian.F  data_grib2.F  data_gribs.F  data_hirlam.F  data_invalid_values.F  data_limited_area.F  data_rgg640.F  data_rll_1-deg.F  data_t1279_gg640.F  data_t1279_gg640_cell.F  data_t3999_rgg2000.F  data_t799.F  data_t799_t2m.F  dataonly_linear.F  load.ksh  mars-array.py  octrahydro.py  subreducedgaussian.py  t1000-global-reduced-gg.py
regression/efas/: CMakeLists.txt  boxplot.data  boxplot_log.py  boxplot_reg.py  efas_blue_plot.json  efas_blue_plot_data.json  efas_graph.py  efas_plot.py  graph.py  graph2.py
regression/era/: CMakeLists.txt  era.py  generic.py  obs.json  obsjson.py  small.json  small.template
regression/gallery/: CMakeLists.txt  advanced.py  axis1.py  axis2.py  axis3.py  axis4.py  axis5.py  axis6.py  cloud_box.json  cloud_rose.json  coastlines-library.py  coastlines1.py  coastlines2.py  coastlines3.py  coastlines4.py  coastlines5.py  cold_fronts.geojson  contour1.py  contour10.py  contour11.py  contour12.py  contour13.py  contour14.py  contour15.py  contour16.py  contour17.py  contour18.py  contour2.py  contour3.py  contour4.py  contour5.py  contour6.py  contour7.py  contour8.py  contour9.py  epsboxplot.py  epsrose.py  epswave.py  epswind.py  frame.py  (+53 more)
regression/graph/: CMakeLists.txt  PESCA.ope_2010  TOWER.ope_2010  WAS_RES.2010  bar.F  bar_horizontal.py  bar_horizontal2.py  boxplot_ex.F  graf02.F  graf03.F  graf04.F  graph_lines.F  graph_venice_01.f  graph_venice_02.F  graph_venice_02_stdin.txt  load.ksh  obs.nc  tephi.py  tephi_missing.py  tephi_mv.py  thermoBufr.nc
regression/layout/: CMakeLists.txt  layout_6_plots.F  layout_auto_ex.F  layout_manual_2.F  layout_manual_ex.F  load.ksh
regression/macc/: CMakeLists.txt  diagonal.data  diagonal.json  geodata.json  geomap.json  graph.json  raqgram.py  raqgramdata_NO2_USI.xml  raqgramdata_O3_USI.xml  raqgramdata_PM10_USI.xml  raqgramdata_SO2_USI.xml  symb.json  taylor.json  taylor.py  taylordata.json  xydata.json
regression/proj4/: js.js  (+27 more)
src/: AutoVector.h  CMakeLists.txt  Iterable.h  MagicsDouble.cc  MagicsSingle.cc  ReverseIterable.h  VectorOfPointers.h  cmake_magics_config.h.in  magics.h  magics.pc.in  magics_config.h.in  magics_ecmwf_log.h  magics_windef.h
tools/: CMakeLists.txt  ParaTemplate.odt  axis2doc.py  beau.py  beautify-xml.py  build-attributes.ksh  build-attrubutes.ksh  docs.json  docs.template  gallery.html  generateDebugLibs.sh  header.template  header_mv.template  magicsCompatibilityChecker  magjson2yaml.py  magml2json.pl  make_attributes  make_wrappers  mapgen_clip  mergexml.pl  metview.py  newbase.pl  newclass.pl  newdriver.pl  newfactory.pl  newprojection.pl  newtemplate.pl  shp_process.ksh  source.template  source_mv.template  x  xml2cc.pl  xml2cc.pl.workshop  xml2cc.py  xml2cc_list.pl  xml2cc_mv.py  xml2cc_new.pl  xml2doc.pl  xml2doc.py  xml2docs.py  (+11 more)
(+5317 files in other folders)
